updated index.html file

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ details[open] > summary::after { transform: rotate(90deg); }
 <div class='text-center mb-4'>
   <a href='#productivity' class='btn btn-outline-primary btn-sm me-2'>📈 Jump to Productivity</a>
   <a href='pyodide.html' class='btn btn-outline-primary btn-sm me-2'>🐍 Run Python</a>
+  <a href='sql_editor.html' class='btn btn-outline-primary btn-sm me-2'>📑 Run SQL</a>
   <a href='javascript_web_editor.html' class='btn btn-outline-primary btn-sm me-2'>👾 Run JavaScript</a>
 </div>
 <input type='text' id='searchBox' class='form-control mb-4' placeholder='🔍 Search notebooks...'>
