--- a/sql_editor.html
+++ b/sql_editor.html
@@ -177,14 +177,15 @@
   <button>*</button>
   <button>FROM</button>
   <button>WHERE</button>
+  <button>;</button>
+  <button>JOIN</button>
+  <button>LIMIT</button>
   <button>(</button>
   <button>)</button>
   <button>"</button>
   <button>'</button>
-  <button>JOIN</button>
   <button>GROUP BY</button>
   <button>ORDER BY</button>
-  <button>LIMIT</button>
   <button>INSERT</button>
   <button>UPDATE</button>
   <button>DELETE</button>
