--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@ details[open] > summary::after { transform: rotate(90deg); }
 <details>
 <summary>02_Data_Analysis</summary>
   <details>
+  <summary>Introduction to Data Analytics</summary>
+
+    <div class='notebook-entry'>
+        <a href='notebooks/02_Data_Analysis/Introduction to Data Analytics/Key Concepts of Data for a Data Analyst.html' target='_blank' rel='noopener noreferrer'>📓 Key concepts of data for a data analyst</a>
+        <div class='created-date'><span class='arrow'>&#x21B3;</span> 2025-08-31</div>
+    </div>
+                        
+
+    <div class='notebook-entry'>
+        <a href='notebooks/02_Data_Analysis/Introduction to Data Analytics/What is Data Analytics.html' target='_blank' rel='noopener noreferrer'>📓 What is data analytics</a>
+        <div class='created-date'><span class='arrow'>&#x21B3;</span> 2025-08-31</div>
+    </div>
+                        
+  </details>
+  <details>
   <summary>Kaggle</summary>
 
     <div class='notebook-entry'>
@@ -375,10 +390,10 @@ document.getElementById('searchBox').addEventListener('input', function () {
     folder.open = visibleNested && filter.length > 0;
   });
 });
-const last30DaysLabels = ["Jul 31", "Aug 01", "Aug 02", "Aug 03", "Aug 04", "Aug 05", "Aug 06", "Aug 07", "Aug 08", "Aug 09", "Aug 10", "Aug 11", "Aug 12", "Aug 13", "Aug 14", "Aug 15", "Aug 16", "Aug 17", "Aug 18", "Aug 19", "Aug 20", "Aug 21", "Aug 22", "Aug 23", "Aug 24", "Aug 25", "Aug 26", "Aug 27", "Aug 28", "Aug 29"];
-const last30DaysCounts = [0, 0, 2, 0, 2, 0, 0, 2, 0, 2, 0, 1, 0, 0, 4, 0, 0, 0, 0, 0, 2, 3, 0, 0, 0, 0, 1, 0, 0, 2];
+const last30DaysLabels = ["Aug 02", "Aug 03", "Aug 04", "Aug 05", "Aug 06", "Aug 07", "Aug 08", "Aug 09", "Aug 10", "Aug 11", "Aug 12", "Aug 13", "Aug 14", "Aug 15", "Aug 16", "Aug 17", "Aug 18", "Aug 19", "Aug 20", "Aug 21", "Aug 22", "Aug 23", "Aug 24", "Aug 25", "Aug 26", "Aug 27", "Aug 28", "Aug 29", "Aug 30", "Aug 31"];
+const last30DaysCounts = [2, 0, 2, 0, 0, 2, 0, 2, 0, 1, 0, 0, 4, 0, 0, 0, 0, 0, 2, 3, 0, 0, 0, 0, 1, 0, 0, 2, 0, 2];
 const monthDaysLabels = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31];
-const monthDaysCounts = [0, 2, 0, 2, 0, 0, 2, 0, 2, 0, 1, 0, 0, 4, 0, 0, 0, 0, 0, 2, 3, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0];
+const monthDaysCounts = [0, 2, 0, 2, 0, 0, 2, 0, 2, 0, 1, 0, 0, 4, 0, 0, 0, 0, 0, 2, 3, 0, 0, 0, 0, 1, 0, 0, 2, 0, 2];
 window.addEventListener('DOMContentLoaded', () => {
   const ctxBar = document.getElementById('barChart').getContext('2d');
   new Chart(ctxBar, {
