updated mysql notes

--- a/notebooks/02_Data_Analysis/Introduction to Data Analytics/Case Studies.html
+++ b/notebooks/02_Data_Analysis/Introduction to Data Analytics/Case Studies.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>What is Data Analytics</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>Case Studies</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -7526,66 +7526,75 @@ a.anchor-link {
 </head>
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 <main>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=9931c6ed-e300-426f-bcf7-9607abb724f9">
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell" id="cell-id=298c940a-81d4-41d8-ac2a-22ff210b9754">
 <div class="jp-Cell-inputWrapper" tabindex="0">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h1 id="What-is-Data-Analytics?">What is Data Analytics?<a class="anchor-link" href="#What-is-Data-Analytics?">¶</a></h1><hr/>
-<p>Data analytics is the practice of examining raw data to uncover patterns, trends, and insights that support decision-making. It can involve simple descriptive analysis (summarizing what happened), diagnostic analysis (understanding why it happened), predictive analysis (forecasting what will happen), and prescriptive analysis (recommending actions).</p>
-<p>While advanced analytics often requires data scientists, modern platforms provide tools such as natural language queries and automated insights that empower business users as well. Data analytics is closely related to business intelligence (BI), which focuses on reporting and visualization, but analytics goes further by applying statistical, computational, and sometimes machine learning techniques to generate forward-looking insight</p>
-<hr/>
-<h2 id="Data-Analytics-vs.-Big-Data-vs.-Data-Science">Data Analytics vs. Big Data vs. Data Science<a class="anchor-link" href="#Data-Analytics-vs.-Big-Data-vs.-Data-Science">¶</a></h2><hr/>
-<p>These three terms are often used together, but they are not the same thing. Here’s how they connect:</p>
-<h4 id="--Big-Data">- Big Data<a class="anchor-link" href="#--Big-Data">¶</a></h4><p>Big data refers to the massive amounts of information being created every second—from databases, IoT devices, social media, emails, and more. The role of big data is to provide the raw material. You can think of it as the fuel that powers analytics. The more data available, the richer the insights you can gain.</p>
-<h4 id="--Data-Analytics">- Data Analytics<a class="anchor-link" href="#--Data-Analytics">¶</a></h4><p>Data analytics is the process of examining data to find patterns, trends, and insights that help businesses make better decisions. It turns big data into something useful—like an engine that runs on the fuel of big data. Analytics can be descriptive (what happened), diagnostic (why it happened), predictive (what might happen), or prescriptive (what to do next).</p>
-<h4 id="--Data-Science">- Data Science<a class="anchor-link" href="#--Data-Science">¶</a></h4><p>Data science is the broader field that studies how to work with data to generate meaning. Data scientists often design the models, algorithms, and advanced techniques that make analytics more powerful. You can think of the data scientist as the mechanic or engineer who builds and tunes the analytics engine.</p>
-<hr/>
-<h2 id="The-Four-Main-Types-of-Data-Analytics">The Four Main Types of Data Analytics<a class="anchor-link" href="#The-Four-Main-Types-of-Data-Analytics">¶</a></h2><hr/>
-<h4 id="1.-Descriptive-Analytics-%E2%80%93-What-happened?">1. Descriptive Analytics – What happened?<a class="anchor-link" href="#1.-Descriptive-Analytics-%E2%80%93-What-happened?">¶</a></h4><ul>
-<li>Focuses on summarizing past data: “how many, when, where, and what.”</li>
-<li>Examples: sales reports, website traffic dashboards, monthly marketing performance. \</li>
-</ul>
-<p>Two kinds:
-    - Canned reports → pre-designed, regularly generated (e.g., monthly ad performance).
-    - Ad hoc reports → custom reports created on the fly for a specific question (e.g., which city engages most with your social media page).</p>
-<p>👉 Think of descriptive analytics as your rearview mirror—it shows where you’ve been.</p>
-<p>⸻</p>
-<h4 id="2.-Diagnostic-Analytics-%E2%80%93-Why-did-it-happen?">2. Diagnostic Analytics – Why did it happen?<a class="anchor-link" href="#2.-Diagnostic-Analytics-%E2%80%93-Why-did-it-happen?">¶</a></h4><ul>
-<li>Digs deeper into past data to find causes and correlations.</li>
-<li>Tools include drill downs, queries, alerts, and data mining. \</li>
-</ul>
-<p>Examples:
-    - A drop in sales → drill down reveals a sales rep was on vacation.
-    - Low staff hours → an alert warns this could reduce closed deals.
-    - Also helps “discover” new insights, like identifying the most qualified job candidate.</p>
-<p>👉 Diagnostic analytics is like a detective, finding the reasons behind events.</p>
-<p>⸻</p>
-<h4 id="3.-Predictive-Analytics-%E2%80%93-What-might-happen?">3. Predictive Analytics – What might happen?<a class="anchor-link" href="#3.-Predictive-Analytics-%E2%80%93-What-might-happen?">¶</a></h4><ul>
-<li>Uses statistical models and machine learning to forecast future outcomes.</li>
-<li>Helps find trends, correlations, and causation.</li>
-<li>Example: Predicting how a Facebook T-shirt ad campaign will perform based on audience age, income, or location.</li>
-<li>Can estimate potential revenue across different target groups.</li>
-</ul>
-<p>👉 Predictive analytics is your crystal ball, giving a glimpse into possible futures.</p>
-<p>⸻</p>
-<h4 id="4.-Prescriptive-Analytics-%E2%80%93-What-should-we-do?">4. Prescriptive Analytics – What should we do?<a class="anchor-link" href="#4.-Prescriptive-Analytics-%E2%80%93-What-should-we-do?">¶</a></h4><ul>
-<li>The most advanced type—goes beyond prediction to recommend actions.</li>
-<li>Uses AI, big data, and optimization techniques to suggest the best approach. \</li>
-</ul>
-<p>Examples:
-    - Testing different slogans or ad designs to see which performs best.
-    - Recommending the shirt color most likely to appeal to older customers.</p>
-<p>👉 Prescriptive analytics is like a coach, telling you the best move to make.</p>
-<p><br/><hr style="width: 60%; margin: auto;"/><br/></p>
-<h3 id="Key-Takeaway">Key Takeaway<a class="anchor-link" href="#Key-Takeaway">¶</a></h3><pre><code>• Descriptive → what happened (reporting).
-• Diagnostic → why it happened (causes).
-• Predictive → what might happen (forecasting).
-• Prescriptive → what to do about it (recommendations).
+<h1 id="Case-Studies-(AI-generated)">Case Studies (AI generated)<a class="anchor-link" href="#Case-Studies-(AI-generated)">¶</a></h1><hr/>
+<h2 id="Case-Study-1:-Retail-Store-Chain">Case Study 1: Retail Store Chain<a class="anchor-link" href="#Case-Study-1:-Retail-Store-Chain">¶</a></h2><p><strong>Scenario:</strong>
+You are working as a junior data analyst for FreshMart, a regional grocery store chain with 15 branches across the country. Recently, management has noticed that profits are flat despite an increase in overall sales. They suspect issues like inventory management, seasonal promotions, or regional performance differences. FreshMart collects data on sales, customer loyalty cards, supplier deliveries, and promotions.</p>
+<h4 id="Tasks-/-Exercises:">Tasks / Exercises:<a class="anchor-link" href="#Tasks-/-Exercises:">¶</a></h4><ol>
+<li>Generate 5 business questions related to competitor performance in the region (e.g., pricing, promotions, market share).</li>
+</ol>
+<p><textarea style="color: green; min-width: 60%; max-width: 60%;  min-height: 10rem; margin: auto; display: block;">Question 1
+Question 2
+Question 3</textarea></p>
 
-</code></pre>
-<p>Together, these four levels of analytics move from looking back → understanding → looking forward → taking action.</p>
+<ol>
+<li>Create 3 possible data sources that could help investigate why sales are not translating into higher profits.</li>
+</ol>
+<p><textarea style="color: green; min-width: 60%; max-width: 60%;  min-height: 10rem; margin: auto; display: block;"></textarea></p>
+<ol start="2">
+<li>Write 2 hypotheses explaining the gap between sales growth and stagnant profits.</li>
+</ol>
+<p><textarea style="color: green; min-width: 60%; max-width: 60%;  min-height: 10rem; margin: auto; display: block;"></textarea></p>
+<ol start="3">
+<li>Identify at least 3 key metrics that would help FreshMart monitor store performance.</li>
+</ol>
+<p><textarea style="color: green; min-width: 60%; max-width: 60%;  min-height: 10rem; margin: auto; display: block;"></textarea></p>
+<ol start="4">
+<li>Suggest 1 short-term and 1 long-term analysis project that could address profitability concerns.</li>
+</ol>
+<p><textarea style="color: green; min-width: 60%; max-width: 60%;  min-height: 10rem; margin: auto; display: block;"></textarea></p>
+<p><br/><hr/><br/></p>
+<h2 id="Case-Study-2:-E-commerce-Website">Case Study 2: E-commerce Website<a class="anchor-link" href="#Case-Study-2:-E-commerce-Website">¶</a></h2><p><strong>Scenario:</strong>
+You join the analytics team at ShopEase, an e-commerce company specializing in electronics and fashion. The company tracks user behavior (clicks, search queries, cart activity), but cart abandonment rates are high. Marketing believes it’s due to shipping costs, while the product team thinks the website design is confusing. Customers have also complained about late deliveries.</p>
+<h4 id="Tasks-/-Exercises:">Tasks / Exercises:<a class="anchor-link" href="#Tasks-/-Exercises:">¶</a></h4><ol>
+<li>Generate 5 analytical questions related to cart abandonment (factors, trends, customer segments).</li>
+</ol>
+<p><textarea style="color: green; min-width: 60%; max-width: 60%;  min-height: 10rem; margin: auto; display: block;"></textarea></p>
+<ol start="2">
+<li>List 3 potential KPIs to measure checkout success and conversion.</li>
+</ol>
+<p><textarea style="color: green; min-width: 60%; max-width: 60%;  min-height: 10rem; margin: auto; display: block;"></textarea></p>
+<ol start="3">
+<li>Draft 2 survey or feedback questions you would recommend sending to customers to gather qualitative data.</li>
+</ol>
+<p><textarea style="color: green; min-width: 60%; max-width: 60%;  min-height: 10rem; margin: auto; display: block;"></textarea></p>
+<ol start="4">
+<li>Identify 3 possible root causes of cart abandonment that could be tested with data.</li>
+</ol>
+<p><textarea style="color: green; min-width: 60%; max-width: 60%;  min-height: 10rem; margin: auto; display: block;"></textarea></p>
+<ol start="5">
+<li>Propose a basic A/B test design the company could run to validate if shipping costs affect abandonment.</li>
+</ol>
+<p><textarea style="color: green; min-width: 60%; max-width: 60%;  min-height: 10rem; margin: auto; display: block;"></textarea></p>
+</div>
+</div>
+</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs" id="cell-id=6f2489eb-b0e8-4c60-a665-c9bcb0377805">
+<div class="jp-Cell-inputWrapper" tabindex="0">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [ ]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="cm-editor cm-s-jupyter">
+<div class="highlight hl-ipython3"><pre><span></span> 
+</pre></div>
+</div>
 </div>
 </div>
 </div>
